# type-matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  conanfile_linux.txt  conanfile_windows.txt  configure_debug.bat  configure_release.bat
configuration_scripts/: README.md
configuration_scripts/gcc_universal/: configure_debug.py  configure_release.py
configuration_scripts/visual_studio/: build_debug.py  build_release.py  configure_debug.py  configure_release.py
include/: conf.h  exit_errors.h  helpers.h  keyboard_handler.h  matrix.h  ncurses_control.h
src/: conf.cpp  helpers.cpp  keyboard_handler.cpp  main.cpp  matrix.cpp  ncurses_control.cpp
